[tool.poetry]
name = "cga4233de"
version = "0.1.0"
description = "Library to interact with the CGA4233DE router, distributed by Vodafone Germany"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
